@@ -62,6 +62,7 @@ AC_OUTPUT([
 	src/Makefile
 	pixmaps/Makefile
 	data/Makefile
+	man/Makefile
 	po/Makefile.in
 ])
 
